﻿$Revision$
	$Author$ $Date$
	1. Far3 build 2043 API

#Revision: 1703
	#Author: ctapmex Date: 2011-03-24 12:26:48 +0500 (Чт, 24 мар 2011)
	1. рефакторинг

#Revision: 1702
	Author: ctapmex Date: 2011-03-23 17:21:20 +0500 (Ср, 23 мар 2011)
	1. обработка возможной ошибки в FarEditorSet::openMenu 
	2. при вставке текста из Outliner устанавливаем курсор на конец вставленного текста

#Revision: 1701
	Author: ctapmex Date: 2011-03-23 15:39:43 +0500 (Ср, 23 мар 2011)
	1. Far3 build 1929 API
	2. функции в SettingsControl переделаны/скопированы по аналогии с Far`овскими

#Revision: 1692
	Author: ctapmex Date: 2011-03-18 17:51:47 +0500 (Пт, 18 мар 2011)
	1. меняем умолчания для отображения креста

#Revision: 1677
	Author: ctapmex Date: 2011-03-13 23:25:26 +0500 (Вс, 13 мар 2011)
	1. Far3 build 1907 API
	2. truemod пока не трогаем - надо переделывать сам far
	3. версию плагина не трогаем, иногда реализовывают пожелания трудящихся )

#Revision: 1673
	Author: ctapmex Date: 2011-03-10 18:06:00 +0500 (Чт, 10 мар 2011)
	1. переименовываем проект в pcolorer3

#Revision: 1662
	Author: ctapmex Date: 2011-02-28 14:40:46 +0500 (Пн, 28 фев 2011)
	1. работа с настройками плагина вынесена в отдельный класс и 
	 работает через API Far3
	2. Colorer переведен полностью на Far3 build 1895 API
	3. в связи с особенностями работы фар с версией плагина, меняем текущую версию
	 с 1.0.3.1 на 1.3.1
	4. плагин именуем FarColorer, а не Colorer

#Revision: 1661
	Author: ctapmex Date: 2011-02-27 00:40:10 +0500 (Вс, 27 фев 2011)
	1. меню Outliner

#Revision: 1660
	Author: ctapmex Date: 2011-02-26 23:37:42 +0500 (Сб, 26 фев 2011)
	1. диалоги настройки плагина

#Revision: 1659
	Author: ctapmex Date: 2011-02-26 12:03:16 +0500 (Сб, 26 фев 2011)
	1. починка меню плагина и меню выбора типа файла
	2. переименование экспортируемых функций

#Revision: 1658
	Author: ctapmex Date: 2011-02-26 11:05:28 +0500 (Сб, 26 фев 2011)
	1. обновлен far3sdk
	2. продолжаем адаптацию к новому API